--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,64 @@
+alabaster==1.0.0
+anyio==4.6.2.post1
 asgiref==3.8.1
 attrs==24.2.0
 autobahn==24.4.2
 Automat==22.10.0
+babel==2.16.0
+certifi==2024.8.30
 cffi==1.17.0
 channels==4.1.0
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
 constantly==23.10.4
 cryptography==43.0.0
 daphne==4.1.2
 Django==5.0.7
+django-allauth==65.0.1
 django-cors-headers==4.4.0
 django-debug-toolbar==4.4.6
+django-rest-passwordreset==1.4.1
 djangorestframework==3.15.2
+docutils==0.21.2
+h11==0.14.0
 hyperlink==21.0.0
 idna==3.7
+imagesize==1.4.1
 incremental==24.7.2
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+packaging==24.2
 pillow==10.4.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+Pygments==2.18.0
 pyOpenSSL==24.2.1
+requests==2.32.3
 service-identity==24.1.0
 setuptools==72.1.0
 six==1.16.0
+sniffio==1.3.1
+snowballstemmer==2.2.0
+Sphinx==8.1.3
+sphinx-autobuild==2024.10.3
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 sqlparse==0.5.1
+starlette==0.41.3
 Twisted==24.7.0
 txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.3
+uvicorn==0.32.1
+watchfiles==1.0.0
+websockets==14.1
 zope.interface==7.0.1
